CategoryServiceImpl issue resolved